// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | PageHeader Page header ReactNode title 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 fCiISE"
>
  <div
    className="PageWrapper__Outer-sc-1ur2ylx-0 iYsWey"
  >
    <div
      className="PageWrapper__Inner-sc-1ur2ylx-1 kOfIEH"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jCrsZz"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
        >
          <div
            className="Box__StyledDiv-sc-1bfv3i9-0 xnKOi"
          >
            <h1
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ekyJLf"
            >
              I am a ReactNode
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | PageHeader Page header with children 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 fCiISE"
>
  <div
    className="PageWrapper__Outer-sc-1ur2ylx-0 iYsWey"
  >
    <div
      className="PageWrapper__Inner-sc-1ur2ylx-1 kOfIEH"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jCrsZz"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
        >
          <div
            className="Box__StyledDiv-sc-1bfv3i9-0 xnKOi"
          >
            <h1
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ekyJLf"
            >
              Your darkest loaves
            </h1>
          </div>
        </div>
        <div
          className="Media__StyledDiv-sc-1dic02p-0 grJSKJ"
        >
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
          >
            <div
              className="Separator__StyledSeparator-a5vdsz-0 kXyqdV"
            />
          </div>
        </div>
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
        >
          <div
            className="Box__StyledDiv-sc-1bfv3i9-0 kzvCce"
          >
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 ikmDpW"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 bTsvfH"
              >
                <div
                  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
                >
                  The eternal techlead, The portugese friend
                </div>
                <div
                  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
                >
                  <button
                    className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kavUlS"
                    onClick={[Function]}
                    type="button"
                  >
                    <span>
                      <span
                        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
                      >
                        Click here to recruit carl
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | PageHeader Regular page header 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 fCiISE"
>
  <div
    className="PageWrapper__Outer-sc-1ur2ylx-0 iYsWey"
  >
    <div
      className="PageWrapper__Inner-sc-1ur2ylx-1 kOfIEH"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jCrsZz"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
        >
          <div
            className="Box__StyledDiv-sc-1bfv3i9-0 xnKOi"
          >
            <h1
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ekyJLf"
            >
              Your darkest loaves
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
